infrastructure/environments/fast-dev/gcp/au/cluster/namespaces/main/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: main
  labels:
    istio-injection: enabled
