infrastructure/environments/fast-dev/gcp/au/cluster/namespaces/main/manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello
  namespace: main
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
