infrastructure/environments/fast-dev/gcp/au/cluster/namespaces/main/manifests/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: main
spec:
  hosts:
  - "*"
  gateways:
  - main/hello
  http:
  - route:
    - destination:
        host: hello
        port:
          number: 80
